--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.center {
+  text-align: center;
+  border: 3px solid blue;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
